--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "gulp": "latest",
     "gulp-typescript": "latest",
     "moment": "^2.24.0",
